--- a/Home.html
+++ b/Home.html
@@ -4,6 +4,7 @@
 <p>Welcome to my Training Application</p>
 <p>Training is getting over.Yeh!!<p>
 <p>Dionne loves training!!</p>
+<p>Kim needs a vacation!!!!</p>
 </div>
 </body>
 </html>
