Added Feature 1 code to Homet.html

--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,9 @@
 <p>Becky</p>
 <p>Git Training</p>
 <P>STAT Training</P>
+<div id="Feature1">
+<a href="http://google.com">Go To Google</a>
+</div>
 </div>
 </body>
 </html>
